Fixed form field spacing (#259)
* Put everything on one line to get rid of white space and added margin

* Removed commented-out style rule

--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -88,6 +88,7 @@
 }
 
 .person-row {
+  select, input {margin-left: 3px;}
   select.form-control-subtle {
     display: inline-block !important;
     width: 12%;
@@ -122,7 +123,6 @@
   }
   input.middle {
     width: 8%;
-    padding: 3px;
     @include respond-to(extrasmall) {
       width: 12%;
       margin-left: 14px;
